# web-data-collection

./: README.md  example.ipynb  pyproject.toml  requirements.txt  setup.py
web_data_collection/: __init__.py  configs.py  data_extraction.py  prompts.py  quality_control.py  query_generation.py  utils.py  webpage_retrieval.py
web_data_collection/data/: app_downloads.csv  climate_events.csv  country_to_code.json  country_to_mc_sources.json  police_misconduct.csv
